big change on structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,23 +8,22 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 project(main)
 
 include_directories( 
-  Empresa
-  Endereco
-  functions
-  Pessoa
-  Vagas
+  include
+  entradas
  )
 
 set( MY_CPP_FILES 
-  Empresa/Empresa.cpp
-  Endereco/Endereco.cpp
-  Pessoa/Pessoa.cpp
-  Pessoa/Desempregado/Desempregado.cpp
-  Vagas/Vagas.cpp
-  Operations/Operations.cpp
-  Util/Util.cpp
-  Populate/Populate.cpp
-  main.cpp
+  src/Empresa.cpp
+  src/Endereco.cpp
+  src/Pessoa.cpp
+  src/Desempregado.cpp
+  src/Vagas.cpp
+  src/Operations.cpp
+  src/Util.cpp
+  src/Populate.cpp
+  src/main.cpp
 )
+
+set(EXECUTABLE_OUTPUT_PATH "bin")
 
 add_executable( main ${MY_CPP_FILES})
